<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory android:title="@string/pref_general_group">
<CheckBoxPreference 
android:defaultValue="true" 
android:key="pref_start_boot"
android:title="@string/pref_start_boot_title"
android:summary="@string/pref_start_boot_summary"
android:enabled="true"/>


 <ListPreference android:title="@string/set_locale_title"
   android:key="pref_default_locale"
   android:summary="@string/set_locale_summary"
   android:defaultValue="en">
 </ListPreference>

</PreferenceCategory>


<PreferenceCategory android:title="@string/pref_node_configuration"
 android:summary="@string/pref_node_configuration_summary">
 
<EditTextPreference android:key="pref_entrance_nodes"
android:title="@string/pref_entrance_node"
android:summary="@string/pref_entrance_node_summary"
android:dialogTitle="@string/pref_entrance_node_dialog"
/>
<EditTextPreference android:key="pref_exit_nodes"
android:title="@string/exit_nodes"
android:summary="@string/fingerprints_nicks_countries_and_addresses_for_the_last_hop"
android:dialogTitle="@string/enter_exit_nodes"
/>
<EditTextPreference android:key="pref_exclude_nodes"
android:title="@string/exclude_nodes"
android:summary="@string/fingerprints_nicks_countries_and_addresses_to_exclude"
android:dialogTitle="@string/enter_exclude_nodes"
/>

<CheckBoxPreference android:defaultValue="false" 
android:title="@string/strict_nodes" android:key="pref_strict_nodes" 
android:summary="@string/use_only_these_specified_nodes"/>

</PreferenceCategory> 
<PreferenceCategory android:title="@string/bridges">

<CheckBoxPreference android:defaultValue="false" 
android:title="@string/use_bridges" android:key="pref_bridges_enabled" 
android:summary="@string/enable_alternate_entrance_nodes_into_the_tor_network"/>

<EditTextPreference android:key="pref_bridges_list"
android:title="@string/bridges"
android:summary="@string/ip_address_and_port_of_bridges"
android:dialogTitle="@string/enter_bridge_addresses"
android:defaultValue="@string/default_bridges"
android:inputType="textMultiLine|textNoSuggestions"
/>

</PreferenceCategory>



<PreferenceCategory android:title="@string/pref_proxy_title">
<EditTextPreference android:key="pref_proxy_type"
android:title="@string/pref_proxy_type_title"
android:summary="@string/pref_proxy_type_summary"
android:dialogTitle="@string/pref_proxy_type_dialog"
/>
<EditTextPreference android:key="pref_proxy_host"
android:title="@string/pref_proxy_host_title"
android:summary="@string/pref_proxy_host_summary"
android:dialogTitle="@string/pref_proxy_host_dialog"
/>
<EditTextPreference android:key="pref_proxy_port"
android:title="@string/pref_proxy_port_title"
android:summary="@string/pref_proxy_port_summary"
android:dialogTitle="@string/pref_proxy_port_dialog"
/>

<EditTextPreference android:key="pref_proxy_username"
android:title="@string/pref_proxy_username_title"
android:summary="@string/pref_proxy_username_summary"
android:dialogTitle="@string/pref_proxy_username_dialog"
/>
<EditTextPreference android:key="pref_proxy_password"
android:title="@string/pref_proxy_password_title"
android:summary="@string/pref_proxy_password_summary"
android:dialogTitle="@string/pref_proxy_password_dialog"
/>
</PreferenceCategory>

<PreferenceCategory android:title="Debug">
  <EditTextPreference android:key="pref_custom_torrc"
android:title="@string/pref_torrc_title"
android:summary="@string/pref_torrc_summary"
android:dialogTitle="@string/pref_torrc_dialog"
/>
    
  
<CheckBoxPreference
android:key="pref_enable_logging"
android:defaultValue="false"
android:title="Debug Log"
android:summary="@string/enable_debug_log_to_output_must_use_adb_or_alogcat_to_view_"
android:enabled="true"></CheckBoxPreference>


</PreferenceCategory>
</PreferenceScreen>
